--- a/index.html
+++ b/index.html
@@ -499,6 +499,12 @@
 </style>
 
 <script>
+	// Add event listener for the Enter key press
+        document.getElementById('sqlInput').addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
+                runSQLQuery();
+            }
+        });
     function runSQLQuery() {
         const input = document.getElementById('sqlInput').value.toLowerCase().trim();
         const response = document.getElementById('sqlResponse');
