--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
 
 <style>
     /* Add terminal-specific styles under the new class to avoid conflicts */
+.textarea {
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
+}
+
 .terminal-container {
     width: 250px;
     height: 250px;
