--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
 <style>
     /* Add terminal-specific styles under the new class to avoid conflicts */
-.textarea {
+.terminal-textarea {
     width: 100%;
     height: auto;
     overflow-y: auto;
@@ -331,6 +331,9 @@
 .terminal-container .butt {
     display: flex;
     align-items: center;
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
 }
 
 .terminal-container .btn {
@@ -390,10 +393,16 @@
 
 .terminal-container .terminal_promt {
     display: flex;
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
 }
 
 .terminal-container .terminal_promt span {
     margin-left: 4px;
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
 }
 
 .terminal-container .terminal_user {
@@ -414,6 +423,9 @@
     width: 5px;
     margin-left: 10px;
     animation: curbl 1200ms linear infinite;
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
 }
 
 @keyframes curbl {
