--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
 
 .terminal-container .terminal_cursor {
     display: block;
-    margin-left: 5px;
+    margin-left: 1px;
     animation: curbl 1200ms linear infinite;
-    width: 5%;
+    width: 5px;
     height: auto;
     overflow-y: auto;
 }
