--- a/index.html
+++ b/index.html
@@ -188,9 +188,8 @@
             <h2>About Me</h2>
             <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
 		<button>
-    			<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">Visit My LinkedIn</a>
-    			<div id="clip">
-       			<div id="leftTop" class="corner"></div>
+    			<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank"> Visit My LinkedIn</a>
+			<div id="leftTop" class="corner"></div>
         		<div id="rightBottom" class="corner"></div>
         		<div id="rightTop" class="corner"></div>
         		<div id="leftBottom" class="corner"></div>
@@ -228,8 +227,8 @@
             <h2>Work Experience</h2>
             <div class="work-section">
                 <div class="work-item">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpromark365.com%2Fwp-content%2Fuploads%2F2023%2F01%2FBecketts-logo_400px.jpg&f=1&nofb=1&ipt=46ad5e1054d66465e6c65556e0e891cf9d8e74b4fbb71d7343a343cd239329e6&ipo=images" alt="Company Logo">
-                    <div>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.facultyplus.com%2Fwp-content%2Fuploads%2F2022%2F07%2FP.B.-siddhartha-college.png&f=1&nofb=1&ipt=4f798897ffc6f0525ebc8912182ece3e402c8330e0fc54eebd25cf0b167855db&ipo=images" alt="School Logo">
+			<div>
                         <strong>Business Systems Analyst</strong><br>
                         Beckett's Foods (2024 - Current)
                         <p>Managing core system functionality using SQL and managed first line support system.</p>
