--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <h2>Work Experience</h2>
             <div class="work-section">
                 <div class="work-item">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.facultyplus.com%2Fwp-content%2Fuploads%2F2022%2F07%2FP.B.-siddhartha-college.png&f=1&nofb=1&ipt=4f798897ffc6f0525ebc8912182ece3e402c8330e0fc54eebd25cf0b167855db&ipo=images" alt="School Logo">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpromark365.com%2Fwp-content%2Fuploads%2F2023%2F01%2FBecketts-logo_400px.jpg&f=1&nofb=1&ipt=46ad5e1054d66465e6c65556e0e891cf9d8e74b4fbb71d7343a343cd239329e6&ipo=images" alt="Company Logo">
 			<div>
                         <strong>Business Systems Analyst</strong><br>
                         Beckett's Foods (2024 - Current)
