--- a/index.html
+++ b/index.html
@@ -187,17 +187,17 @@
         <div class="card">
             <h2>About Me</h2>
             <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
-		<button>
-    			<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank"> Visit My LinkedIn</a>
-			<div id="leftTop" class="corner"></div>
-        		<div id="rightBottom" class="corner"></div>
-        		<div id="rightTop" class="corner"></div>
-        		<div id="leftBottom" class="corner"></div>
-    		</div>
-    		<span id="rightArrow" class="arrow"></span>
-    		<span id="leftArrow" class="arrow"></span>
-		</button>
-        </div>
+		<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">
+    <button>
+        Visit My LinkedIn
+        <div id="leftTop" class="corner"></div>
+        <div id="rightBottom" class="corner"></div>
+        <div id="rightTop" class="corner"></div>
+        <div id="leftBottom" class="corner"></div>
+        <span id="rightArrow" class="arrow"></span>
+        <span id="leftArrow" class="arrow"></span>
+    </button>
+</a>        </div>
     </div>
     <div class="container" id="education">
         <!-- Education Section -->
