--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
 </div>
 
 </div>
-
-
+<a href="https://github.com/varaprasad1016/portfolio/blob/main/Profile.pdf" download="Profile.pdf" class="btn">
+    Download My Resume
+</a>
     <footer>
     <p>© 2024 Varaprasad Sukala</p>
     <div style="margin-top: 1rem;">
