--- a/index.html
+++ b/index.html
@@ -152,22 +152,21 @@
             outline: none;
             width: 5%;
         }
-        .resume-btn {
-            display: none;
-            margin-top: 1rem;
-            padding: 1rem;
-            background-color: #ffdd00;
-            color: #331a00;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            text-transform: uppercase;
-            text-align: center;
-        }
-        .resume-btn.show {
-            display: block;
-        }
+        .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0073b1; /* LinkedIn Blue */
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background-color: #005582;
+}
+
 </style>
 
 </head>
