--- a/index.html
+++ b/index.html
@@ -152,20 +152,32 @@
             outline: none;
             width: 5%;
         }
-        .btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #0073b1; /* LinkedIn Blue */
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: 0.3s;
-}
+       /* Centering the button */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
 
-.btn:hover {
-    background-color: #005582;
-}
+        .btn {
+            display: inline-block;
+            padding: 15px 30px;
+            background-color: #0073b1; /* LinkedIn Blue */
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            border-radius: 8px;
+            transition: 0.3s;
+            text-align: center;
+        }
+
+        .btn:hover {
+            background-color: #005582;
+        }
 
 </style>
 
