--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             padding: 0;
             background: #f4e3d7; /* Parchment background */
             color: #4d3319; /* Dark brown text */
+            /* Remove the flex layout causing vertical centering */
+            /* height: 100vh is removed to allow normal vertical flow */
         }
         header {
             background: #331a00;
@@ -55,7 +57,7 @@
         .container {
             padding: 3rem 2rem;
             max-width: 900px;
-            margin: auto;
+            margin: 2rem auto; /* Added margin-top and margin-bottom */
             background: #f7e3c1; /* Old parchment look */
             border: 2px solid #8c5a24;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -92,26 +94,26 @@
         .edu-section .edu-item div, .work-section .work-item div {
             margin-left: 15px;
         }
-	.btn {
-    	   display: inline-block;
-    	   padding: 0.8rem 1.5rem;
-   	   background: linear-gradient(90deg, #b8864b, #d2a679);
-  	   color: #2c1a08;
-    	   text-decoration: none;
-    	   border-radius: 8px;
-    	   border: 1px solid #8c5a24;
-    	   font-weight: bold;
-   	   text-transform: uppercase;
-    	   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-    	   cursor: pointer;
-    	   transition: all 0.3s ease;
-    	}
+        .btn {
+            display: inline-block;
+            padding: 0.8rem 1.5rem;
+            background: linear-gradient(90deg, #b8864b, #d2a679);
+            color: #2c1a08;
+            text-decoration: none;
+            border-radius: 8px;
+            border: 1px solid #8c5a24;
+            font-weight: bold;
+            text-transform: uppercase;
+            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
 
-	.btn:hover {
-          background: linear-gradient(90deg, #d2a679, #b8864b);
-    	  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-    	  transform: translateY(-2px);
-	}
+        .btn:hover {
+            background: linear-gradient(90deg, #d2a679, #b8864b);
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+            transform: translateY(-2px);
+        }
         footer {
             text-align: center;
             margin-top: 3rem;
@@ -152,23 +154,18 @@
             outline: none;
             width: 5%;
         }
-       /* Centering the button */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            margin: 0;
+        /* Center the download button */
+        .download-resume {
+            text-align: center;
+            margin: 2rem 0;
         }
-
-</style>
+    </style>
 
 </head>
 <body>
     <header>
         <h1>Varaprasad Sukala</h1>
-		<h2> Data Scientist </h2>
+        <h2>Data Scientist</h2>
         <img src="WhatsApp Image 2024-12-15 at 09.27.43_afea45e8.jpg" alt="Profile Picture">
         <nav>
             <a href="#about">About</a>
@@ -181,17 +178,10 @@
         <div class="card">
             <h2>About Me</h2>
             <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
-		<a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">
-    <button>
-        Visit My LinkedIn
-        <div id="leftTop" class="corner"></div>
-        <div id="rightBottom" class="corner"></div>
-        <div id="rightTop" class="corner"></div>
-        <div id="leftBottom" class="corner"></div>
-        <span id="rightArrow" class="arrow"></span>
-        <span id="leftArrow" class="arrow"></span>
-    </button>
-</a>        </div>
+            <a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">
+                Visit My LinkedIn
+            </a>
+        </div>
     </div>
     <div class="container" id="education">
         <!-- Education Section -->
@@ -206,7 +196,7 @@
                     </div>
                 </div>
                 <div class="edu-item">
-                    <img src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.facultyplus.com%2Fwp-content%2Fuploads%2F2022%2F07%2FP.B.-siddhartha-college.png&f=1&nofb=1&ipt=4f798897ffc6f0525ebc8912182ece3e402c8330e0fc54eebd25cf0b167855db&ipo=images alt="School Logo">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.facultyplus.com%2Fwp-content%2Fuploads%2F2022%2F07%2FP.B.-siddhartha-college.png&f=1&nofb=1&ipt=4f798897ffc6f0525ebc8912182ece3e402c8330e0fc54eebd25cf0b167855db&ipo=images" alt="School Logo">
                     <div>
                         <strong>Bachelor of Science</strong><br>
                         PB Siddhartha College of Arts & Sciences(2018 - 2022)
@@ -222,7 +212,7 @@
             <div class="work-section">
                 <div class="work-item">
                     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpromark365.com%2Fwp-content%2Fuploads%2F2023%2F01%2FBecketts-logo_400px.jpg&f=1&nofb=1&ipt=46ad5e1054d66465e6c65556e0e891cf9d8e74b4fbb71d7343a343cd239329e6&ipo=images" alt="Company Logo">
-			<div>
+                    <div>
                         <strong>Business Systems Analyst</strong><br>
                         Beckett's Foods (2024 - Current)
                         <p>Managing core system functionality using SQL and managed first line support system.</p>
@@ -240,46 +230,46 @@
         </div>
     </div>
     <div class="container" id="projects">
-    <!-- Projects Section -->
-    <div class="card">
-        <h2>Projects</h2>
-        <ul>
-            <li>
-                <strong>Intrusion Detection System:</strong>
-                <a href="https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</a>
-            </li>
-            <li>
-                <strong>Gamma Particle Classification:</strong>
-                <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
-            </li>
-            <li>
-                <strong>Neat Log Updater:</strong>
-                <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
-            </li>
-        </ul>
+        <!-- Projects Section -->
+        <div class="card">
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <strong>Intrusion Detection System:</strong>
+                    <a href="https://github.com/varaprasad1016/IntrusionDetectionSystem" class="btn" target="_blank">Source Code</a>
+                </li>
+                <li>
+                    <strong>Gamma Particle Classification:</strong>
+                    <a href="https://github.com/varaprasad1016/Classification-Of-Gamma-Particles-using-Classification-Techniques" class="btn" target="_blank">Source Code</a>
+                </li>
+                <li>
+                    <strong>Neat Log Updater:</strong>
+                    <a href="https://github.com/varaprasad1016/neatlogupdater" class="btn" target="_blank">Source Code</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-
-</div>
-<a href="https://github.com/varaprasad1016/portfolio/blob/main/Profile.pdf" download="Profile.pdf" class="btn">
-    Download My Resume
-</a>
+    <div class="download-resume">
+        <a href="https://github.com/varaprasad1016/portfolio/blob/main/Profile.pdf" download="Profile.pdf" class="btn">
+            Download My Resume
+        </a>
+    </div>
     <footer>
-    <p>© 2024 Varaprasad Sukala</p>
-    <div style="margin-top: 1rem;">
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/varaprasad.py/profilecard/?igsh=MWlwYmdpbmdja3Izeg==" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
-            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width: 30px; vertical-align: middle;">
-        </a>
-        <!-- X (Twitter) -->
-        <a href="https://x.com/i/flow/login?redirect_after_login=%2FVaraprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X (Twitter)" style="width: 30px; vertical-align: middle;">
-        </a>
-        <!-- GitHub -->
-        <a href="https://github.com/varaprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" style="width: 30px; vertical-align: middle;">
-        </a>
-    </div>
-</footer>
+        <p>© 2024 Varaprasad Sukala</p>
+        <div style="margin-top: 1rem;">
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/varaprasad.py/profilecard/?igsh=MWlwYmdpbmdja3Izeg==" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+                <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width: 30px; vertical-align: middle;">
+            </a>
+            <!-- X (Twitter) -->
+            <a href="https://x.com/i/flow/login?redirect_after_login=%2FVaraprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X (Twitter)" style="width: 30px; vertical-align: middle;">
+            </a>
+            <!-- GitHub -->
+            <a href="https://github.com/varaprasad1016" target="_blank" style="margin: 0 10px; text-decoration: none; color: inherit;">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" style="width: 30px; vertical-align: middle;">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
