--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
     <div class="download-resume">
         <a href="https://github.com/varaprasad1016/portfolio/blob/main/Profile.pdf" download="Profile.pdf" class="btn">
-            Download My Resume
+            Download My Profile
         </a>
     </div>
     <footer>
