--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     
     <div class="timeline-item">
         <div class="timeline-icon">
-            <img src="logo_codegnan-transformed.jpeg" alt="Neatcom Logo">
+            <img src="net.png" alt="Neatcom Logo">
         </div>
         <div class="timeline-content">
             <h3 class="timeline-title">Data Analyst</h3>
