--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="card">
                 <p>Hello! I'm Varaprasad Sukala, a passionate Data Scientist with expertise in AI, machine learning, and data analytics. I enjoy solving complex problems and turning data into actionable insights.</p>
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="varaprasadsukalathedatascientist" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/varaprasadsukalathedatascientist?trk=profile-badge">VARA PRASAD</a></div>
+    <a href="https://www.linkedin.com/in/varaprasadsukalathedatascientist" class="btn" target="_blank">Visit My LinkedIn</a>
             </div>
         </section>
 
